--- a/app/src/main/res/layout/fragment_cadastro.xml
+++ b/app/src/main/res/layout/fragment_cadastro.xml
@@ -8,18 +8,18 @@
     android:background="@color/black_tint_30">
 
     <ImageView
-        android:id="@+id/app_logo_login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:id="@+id/app_logo_cadastro"
+        android:layout_width="200dp"
+        android:layout_height="128dp"
+        android:layout_marginTop="40dp"
         android:contentDescription="@string/image_view_logo_description"
         android:src="@drawable/ic_isports_logo"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/signup_email_edit_text"
+        android:id="@+id/cadastro_email_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
@@ -28,15 +28,16 @@
         android:padding="20dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
-        android:drawableStart="@drawable/ic_action_perfil"
+        android:drawableStart="@drawable/ic_action_email"
         android:drawablePadding="20dp"
-        android:inputType="text"
+        android:inputType="textEmailAddress"
+        android:autofillHints="emailAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/app_logo_login" />
+        app:layout_constraintTop_toBottomOf="@+id/app_logo_cadastro" />
 
     <EditText
-        android:id="@+id/signup_username_edit_text"
+        android:id="@+id/cadastro_username_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
@@ -48,12 +49,13 @@
         android:drawableStart="@drawable/ic_action_perfil"
         android:drawablePadding="20dp"
         android:inputType="text"
+        android:autofillHints="username"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signup_email_edit_text" />
+        app:layout_constraintTop_toBottomOf="@+id/cadastro_email_edit_text" />
 
     <EditText
-        android:id="@+id/signup_password_edit_text"
+        android:id="@+id/cadastro_password_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
@@ -65,12 +67,13 @@
         android:textColorHint="@color/black"
         android:drawableStart="@drawable/ic_action_password"
         android:drawablePadding="20dp"
+        android:autofillHints="password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signup_username_edit_text" />
+        app:layout_constraintTop_toBottomOf="@+id/cadastro_username_edit_text" />
 
     <EditText
-        android:id="@+id/signup_confirm_password_edit_text"
+        android:id="@+id/cadastro_confirm_password_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
@@ -82,12 +85,13 @@
         android:textColorHint="@color/black"
         android:drawableStart="@drawable/ic_action_password"
         android:drawablePadding="20dp"
+        android:autofillHints="password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signup_password_edit_text" />
+        app:layout_constraintTop_toBottomOf="@+id/cadastro_password_edit_text" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/loginButton"
+        android:id="@+id/cadastro_Button"
         style="@style/Widget.MaterialComponents.Button.TextButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -95,9 +99,10 @@
         android:padding="20dp"
         android:backgroundTint="@color/grey_tint_50"
         android:text="@string/signupbuttom_text"
+        android:textStyle="bold"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/signup_confirm_password_edit_text" />
+        app:layout_constraintTop_toBottomOf="@+id/cadastro_confirm_password_edit_text" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
