--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -8,7 +8,7 @@
     android:background="@color/black_tint_30">
 
     <ImageView
-        android:id="@+id/app_logo_login"
+        android:id="@+id/app_logo_cadastro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:contentDescription="@string/image_view_logo_description"
@@ -31,9 +31,10 @@
         android:drawableStart="@drawable/ic_action_perfil"
         android:drawablePadding="20dp"
         android:inputType="text"
+        android:autofillHints="username"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/app_logo_login" />
+        app:layout_constraintTop_toBottomOf="@+id/app_logo_cadastro" />
 
     <EditText
         android:id="@+id/login_password_edit_text"
@@ -48,12 +49,13 @@
         android:textColorHint="@color/black"
         android:drawableStart="@drawable/ic_action_password"
         android:drawablePadding="20dp"
+        android:autofillHints="password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/login_username_edit_text" />
 
     <com.google.android.material.button.MaterialButton
-        android:id="@+id/loginButton"
+        android:id="@+id/login_Button"
         style="@style/Widget.MaterialComponents.Button.TextButton"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -61,6 +63,7 @@
         android:padding="20dp"
         android:backgroundTint="@color/grey_tint_50"
         android:text="@string/loginButton_Text"
+        android:textStyle="bold"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -78,6 +81,6 @@
         android:padding="20dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/loginButton" />
+        app:layout_constraintTop_toBottomOf="@+id/login_Button" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
