--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -11,10 +11,10 @@
         android:id="@+id/app_logo_cadastro"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="40dp"
         android:contentDescription="@string/image_view_logo_description"
         android:src="@drawable/ic_isports_logo"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -23,15 +23,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
+        android:autofillHints="username"
         android:background="@color/grey_tint_50"
+        android:drawableStart="@drawable/ic_action_perfil"
+        android:drawablePadding="20dp"
         android:hint="@string/login_username_hint"
+        android:inputType="text"
         android:padding="20dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
-        android:drawableStart="@drawable/ic_action_perfil"
-        android:drawablePadding="20dp"
-        android:inputType="text"
-        android:autofillHints="username"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/app_logo_cadastro" />
