--- a/app/src/main/res/layout/fragment_explorar.xml
+++ b/app/src/main/res/layout/fragment_explorar.xml
@@ -44,7 +44,7 @@
         app:layout_constraintTop_toTopOf="@+id/slider_distancia" />
 
     <TextView
-        android:id="@+id/textView"
+        android:id="@+id/explorar_match_not_found_textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/match_not_found"
@@ -53,7 +53,7 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/explorar_filtrar_button" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation_explorar"
@@ -108,6 +108,16 @@
         android:layout_marginTop="30dp"
         app:layout_constraintEnd_toEndOf="@+id/explorar_data_ate"
         app:layout_constraintTop_toBottomOf="@+id/explorar_data_ate" />
+
+    <Button
+        android:id="@+id/explorar_filtrar_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:text="@string/explorar_filtrar_button_text"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/explorar_time_Ate" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
