Adicionado tela de novo evento e tela de perfil

--- a/app/src/main/res/layout/fragment_perfil.xml
+++ b/app/src/main/res/layout/fragment_perfil.xml
@@ -4,18 +4,63 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".PerfilFragment">
+    tools:context=".PerfilFragment"
+    android:background="@color/black_tint_30">
 
+    <ImageView
+        android:id="@+id/app_logo_cadastro"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="20dp"
+        android:background="@color/grey_tint_30"
+        android:contentDescription="@string/image_view_logo_description"
+        android:src="@drawable/ic_baseline_person"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/perfil_fragment_default"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="25dp"
+        android:text="@string/username_text"
         android:textColor="@color/black"
-        app:layout_constraintBottom_toBottomOf="@+id/bottom_navigation_perfil"
+        app:layout_constraintStart_toEndOf="@+id/app_logo_cadastro"
+        app:layout_constraintTop_toTopOf="@+id/app_logo_cadastro" />
+
+    <EditText
+        android:id="@+id/cadastro_endereço_edit_text"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:background="@color/grey_tint_50"
+        android:hint="@string/signup_address_hint"
+        android:padding="20dp"
+        android:textColor="@color/black"
+        android:textColorHint="@color/black"
+        android:drawableStart="@drawable/ic_baseline_home"
+        android:drawablePadding="20dp"
+        android:inputType="textPostalAddress"
+        android:autofillHints="postalAddress"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/app_logo_cadastro" />
+
+    <com.google.android.material.button.MaterialButton
+        android:id="@+id/logout_Button"
+        style="@style/Widget.MaterialComponents.Button.TextButton"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="15dp"
+        android:padding="20dp"
+        android:backgroundTint="@color/grey_tint_50"
+        android:text="@string/log_out_text"
+        android:textStyle="bold"
+        android:textColor="@color/black"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/cadastro_endereço_edit_text" />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation_perfil"
