--- a/app/src/main/res/layout/fragment_novo_jogo.xml
+++ b/app/src/main/res/layout/fragment_novo_jogo.xml
@@ -41,6 +41,7 @@
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
         android:text="@string/data_text"
+        android:gravity="center"
         android:padding="15dp"
         android:background="@color/grey_tint_50"
         android:textColor="@color/black"
@@ -54,6 +55,7 @@
         android:layout_margin="15dp"
         android:background="@color/grey_tint_50"
         android:padding="20dp"
+        android:gravity="center"
         android:text="@string/explorar_hora_de_text_default"
         android:textColor="@color/black"
         app:layout_constraintEnd_toStartOf="@+id/new_game_time_Ate"
@@ -67,6 +69,7 @@
         android:layout_margin="15dp"
         android:background="@color/grey_tint_50"
         android:padding="20dp"
+        android:gravity="center"
         android:text="@string/explorar_hora_ate_text_default"
         android:textColor="@color/black"
         app:layout_constraintEnd_toEndOf="@+id/new_game_data_de"
