--- a/app/src/main/res/layout/fragment_explorar.xml
+++ b/app/src/main/res/layout/fragment_explorar.xml
@@ -4,9 +4,11 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@color/black_tint_30"
     tools:context=".ExplorarFragment">
 
     <Spinner
+        android:background="@color/grey_tint_50"
         android:id="@+id/tipos_jogos"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -18,8 +20,9 @@
 
     <com.google.android.material.slider.Slider
         android:id="@+id/slider_distancia"
-        android:layout_width="230dp"
+        android:layout_width="210dp"
         android:layout_height="wrap_content"
+        android:background="@color/grey_tint_50"
         android:layout_marginTop="15dp"
         android:padding="20dp"
         android:stepSize="1.0"
@@ -68,6 +71,7 @@
         android:layout_marginTop="15dp"
         android:layout_marginEnd="15dp"
         android:gravity="center"
+        android:background="@color/grey_tint_50"
         android:padding="20dp"
         android:text="@string/explorar_date_de_text_default"
         android:textColor="@color/black"
@@ -81,6 +85,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:padding="20dp"
+        android:background="@color/grey_tint_50"
         android:gravity="center"
         android:text="@string/explorar_date_ate_text_default"
         android:textColor="@color/black"
@@ -93,6 +98,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
         android:layout_marginEnd="15dp"
+        android:background="@color/grey_tint_50"
         android:padding="20dp"
         android:text="@string/explorar_hora_de_text_default"
         android:textColor="@color/black"
@@ -106,6 +112,7 @@
         android:layout_width="183dp"
         android:layout_height="wrap_content"
         android:text="@string/explorar_hora_ate_text_default"
+        android:background="@color/grey_tint_50"
         android:gravity="center"
         android:padding="20dp"
         android:textColor="@color/black"
@@ -114,10 +121,12 @@
         app:layout_constraintTop_toBottomOf="@+id/explorar_data_ate" />
 
     <com.google.android.material.button.MaterialButton
+        android:backgroundTint="@color/grey_tint_50"
         android:id="@+id/explorar_filtrar_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="15dp"
+        android:textColor="@color/black"
         android:text="@string/explorar_filtrar_button_text"
         app:layout_constraintEnd_toEndOf="@+id/explorar_time_Ate"
         app:layout_constraintTop_toBottomOf="@+id/explorar_time_Ate" />
