--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -19,16 +19,16 @@
         app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
-        android:id="@+id/login_username_edit_text"
+        android:id="@+id/login_email_edit_text"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="15dp"
         android:autofillHints="username"
         android:background="@color/grey_tint_50"
-        android:drawableStart="@drawable/ic_action_perfil"
+        android:drawableStart="@drawable/ic_action_email"
         android:drawablePadding="20dp"
-        android:hint="@string/login_username_hint"
-        android:inputType="text"
+        android:hint="@string/login_email_hint"
+        android:inputType="textEmailAddress"
         android:padding="20dp"
         android:textColor="@color/black"
         android:textColorHint="@color/black"
@@ -52,7 +52,7 @@
         android:autofillHints="password"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/login_username_edit_text" />
+        app:layout_constraintTop_toBottomOf="@+id/login_email_edit_text" />
 
     <com.google.android.material.button.MaterialButton
         android:id="@+id/login_Button"
