Passando historico para outro fragmento, e fazendo acesso por ele por outra forma

--- a/app/src/main/res/layout/fragment_meus_jogos.xml
+++ b/app/src/main/res/layout/fragment_meus_jogos.xml
@@ -21,6 +21,17 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <com.google.android.material.floatingactionbutton.ExtendedFloatingActionButton
+        android:id="@+id/fab_historic"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_margin="20dp"
+        android:text="@string/fab_historic_text"
+        android:contentDescription="@string/fab_historic_description"
+        app:layout_constraintBottom_toTopOf="@+id/bottom_navigation_jogos"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent" />
+
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/bottom_navigation_jogos"
